ingress-controller/ingress-mysite-com.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-app
spec:
  rules:
  - host: mysite.com
    http:
      paths:
      - backend:
          serviceName: nginx-app
          servicePort: 80
